20241108_daily_arxiv_update

--- a/arxiv/2024_11_arxiv.html
+++ b/arxiv/2024_11_arxiv.html
@@ -55,6 +55,66 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.23783">https://arxiv.org/abs/2410.23783</a></span> Quantum anomaly triggers the violation of scaling laws in gravitational system ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.17824">https://arxiv.org/abs/2402.17824</a></span> Quantum spin glasses and Sachdev-Ye-Kitaev models ***** (Subir Sachdev)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.23414">https://arxiv.org/abs/2410.23414</a></span> Regularizing Calabi-Yau topological conformal field theories using cutoff heat kernels</p>
+<br>
+<p class="p1">20241104</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.00110">https://arxiv.org/abs/2411.00110</a></span> Lagrangian neural networks for nonholonomic mechanics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.00434">https://arxiv.org/abs/2411.00434</a></span> Quantum linear algebra for disordered electrons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.00353">https://arxiv.org/abs/2411.00353</a></span> Orbital Edelstein effect of the electronic itinerant orbital motion at the edges (Jongjun M. Lee, Min Ju Park, Hyun-Woo Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.00327">https://arxiv.org/abs/2411.00327</a></span> One-dimensional Z-classified topological crystalline insulator under space-time inversion symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.00301">https://arxiv.org/abs/2411.00301</a></span> Spin excitations of the Shastry-Sutherland model – altermagnetism and proximate deconfined quantum criticality</p>
+<p class="p2"><br></p>
+<p class="p1">20241105</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02140">https://arxiv.org/abs/2411.02140</a></span> Quantum complexity and generalized area law in fully connected models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02157">https://arxiv.org/abs/2411.02157</a></span> Entanglement area law in interacting bosons: from Bose-Hubbard, φ4, and beyond</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.01002">https://arxiv.org/abs/2411.01002</a></span> Low-density parity-check codes as stable phases of quantum matter (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.01270">https://arxiv.org/abs/2411.01270</a></span> Towers of Quantum Many-body Scars from Integrable Boundary States (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17062">https://arxiv.org/abs/2409.17062</a></span> Entanglement Hamiltonian and effective temperature of non-Hermitian quantum spin ladders</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.01009">https://arxiv.org/abs/2411.01009</a></span> Finite Entanglement Scaling of Disorder Parameter at Quantum Criticality</p>
+<p class="p2"><br></p>
+<p class="p1">20241106</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02526">https://arxiv.org/abs/2411.02526</a></span> Gapless Floquet topology (Aditi Mitra)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02723">https://arxiv.org/abs/2411.02723</a></span> Universal Spin Screening Clouds in Local Moment Phases (Minsoo L. Kim, Jeongmin Shim, H.-S. Sim, Donghoon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02958">https://arxiv.org/abs/2411.02958</a></span> Gauge theory for topological waves in continuum fluids with odd viscosity (Yuto Ashida)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03196">https://arxiv.org/abs/2411.03196</a></span> Hubbard interaction at finite T on a hexagonal lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02503">https://arxiv.org/abs/2411.02503</a></span> Topological incommensurate Fulde–Ferrell–Larkin–Ovchinnikov superconductor and Bogoliubov Fermi surface in rhombohedral tetra-layer graphene (Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02498">https://arxiv.org/abs/2411.02498</a></span> Introduction to Thermal Field Theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02808">https://arxiv.org/abs/2411.02808</a></span> Electroweak Symmetry Breaking in Sp(6) Gauge-Higgs Unification Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.02663">https://arxiv.org/abs/2411.02663</a></span> Two lectures on Yang-Lee edge singularity and analytic structure of QCD equation of state</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03153">https://arxiv.org/abs/2411.03153</a></span> Webs and multiwebs for the symplectic group</p>
+<p class="p2"><br></p>
+<p class="p1">20241107</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03410">https://arxiv.org/abs/2411.03410</a></span> Classifying Order-Two Spatial Symmetries in Non-Hermitian Hamiltonians: Point-gapped AZ and AZ† Classes **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03679">https://arxiv.org/abs/2411.03679</a></span> Scalar Spin Chirality Hall Effect (Se Kwon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03419">https://arxiv.org/abs/2411.03419</a></span> Geometric fractionalized Fermi liquids: Hidden antiferromagnetism and pseudogap from fluctuating stripes ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04040">https://arxiv.org/abs/2411.04040</a></span> Impurities in Schro ̈dinger field theories and s-wave resonance ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03381">https://arxiv.org/abs/2411.03381</a></span> Young Researchers School 2024 Maynooth: Lectures on CFT, BCFT and DCFT ***** (<a href="https://sites.google.com/view/yrs-topo-lowdim/">https://sites.google.com/view/yrs-topo-lowdim/</a>)</p>
+<a href="https://www.youtube.com/watch?v=CeFnRBqCTCQ">https://www.youtube.com/watch?v=CeFnRBqCTCQ</a><br>
+<a href="https://www.youtube.com/watch?v=-IdAdPjdg24">https://www.youtube.com/watch?v=-IdAdPjdg24</a><br>
+<a href="https://www.youtube.com/watch?v=pcELomJcSh4">https://www.youtube.com/watch?v=pcELomJcSh4</a><br>
+<a href="https://www.youtube.com/watch?v=wQFq-L5Cf6Q">https://www.youtube.com/watch?v=wQFq-L5Cf6Q</a><br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.00805">https://arxiv.org/abs/2411.00805</a></span> Corrigendum and addendum: Long-range multi-scalar models at three loops *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03441">https://arxiv.org/abs/2411.03441</a></span> Mixed-State Topological Order under Coherent Noises ***** (Seunghun Lee, Eun-Gook Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03974">https://arxiv.org/abs/2411.03974</a></span> Fast pseudothermalization ***** (Wonjun Lee, Hyukjoon Kwon, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03496">https://arxiv.org/abs/2411.03496</a></span> Structure factor and topological bound of twisted bilayer semiconductors at fractional fillings (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03547">https://arxiv.org/abs/2411.03547</a></span> An Atlas of Classical Pyrochlore Spin Liquids *** (Owen Benton, Michel J. P. Gingras, Han Yan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03584">https://arxiv.org/abs/2411.03584</a></span> Non-Abelian Combinatorial Gauge Theory *** (Claudio Chamon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03443">https://arxiv.org/abs/2411.03443</a></span> Generalizing the matching decoder for the Chamon code ***</p>
+<p class="p2"><br></p>
+<p class="p1">20241108</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04191">https://arxiv.org/abs/2411.04191</a></span> Topological Modes in Monitored Quantum Dynamics (Chao-Ming Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04645">https://arxiv.org/abs/2411.04645</a></span> Quantum adiabatic optimization with Rydberg arrays: localization phenomena and encoding strategies (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04174">https://arxiv.org/abs/2411.04174</a></span> New classes of quantum anomalous Hall crystals in multilayer graphene *** (Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04171">https://arxiv.org/abs/2411.04171</a></span> Fractionally Quantized Electric Polarization and Discrete Shift of Crystalline Fractional Chern Insulators (Yuxuan Zhang, Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04251">https://arxiv.org/abs/2411.04251</a></span> On Chord Dynamics and Complexity Growth in Double-Scaled SYK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04181">https://arxiv.org/abs/2411.04181</a></span> Protocols for Creating Anyons and Defects via Gauging ***** (Anasuya Lyons, Chiu Fan Bowen Lo, Nathanan Tantivasadakarn, Ashvin Vishwanath, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04185">https://arxiv.org/abs/2411.04185</a></span> Qutrit Toric Code and Parafermions in Trapped Ions ***** (Ashvin Vishwanath, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04993">https://arxiv.org/abs/2411.04993</a></span> Topological stabilizer models on continuous variables ***** (Julio C. Magdalena de la Fuente, Tyler D. Ellison, Meng Cheng, Dominic J. Williamson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04985">https://arxiv.org/abs/2411.04985</a></span> Efficient Preparation of Solvable Anyons with Adaptive Quantum Circuits **** (Yuanjie Ren, Nathanan Tantivasadakarn, Dominic J. Williamson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04360">https://arxiv.org/abs/2411.04360</a></span> Gauge theory and mixed state criticality **** (Takamasa Ando, Shinsei Ryu, Masataka Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.05004">https://arxiv.org/abs/2411.05004</a></span> Long-range entanglement from spontaneous non-onsite symmetry breaking ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04182">https://arxiv.org/abs/2411.04182</a></span> Non-invertible duality and symmetry topological order of one-dimensional lattice models with spatially modulated symmetry ***** (Donghae Seo, Gil Young Cho, Robert-Jan Slager)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.04512">https://arxiv.org/abs/2308.04512</a></span> An introduction to graph theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.04838">https://arxiv.org/abs/2411.04838</a></span> Machine learning and optimization-based approaches to duality in statistical physics ****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
