20241125_daily_arxiv_update

--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	</style>-->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-	--><li><b>[Sep. 2024]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.110.125131" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
-			</li></li>
+	--><li><b>[Nov. 2024]</b>I have been visiting the Institute for Solid State Physics, the University of Tokyo in Japan from November 18th 2024 to early January 2025. And I plan to visit Korea for the month of January 2025.
+			</li>
+			<li><b>[Sep. 2024]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.110.125131" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
+			</li>
 			<li><b>[Sep. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/8407bQf8G3213e363403613769cb4bdd09b5490d1" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking (arXiv:2406.01681)"</a> has been accepted on <span style="font-style: italic;">Physical Review B</span>!
 		</li>
 		<li><b>[Jun. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2406.01681" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking (arXiv:2406.01681)"</a> has been posted on arXiv!
