20241127_new_arxiv_paper_update
New arXiv paper update

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	</style>-->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-	--><li><b>[Nov. 2024]</b>I have been visiting the Institute for Solid State Physics, the University of Tokyo in Japan from November 18th 2024 to early January 2025. And I plan to visit Korea for the month of January 2025.
+	--><li><b>[Nov. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2411.16842" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality (arXiv:2411.16842)"</a> has been posted on arXiv!
+			</li>
+			<li><b>[Nov. 2024]</b> I have been visiting the Institute for Solid State Physics, the University of Tokyo in Japan from November 18th 2024 to early January 2025. And I plan to visit Korea for the month of January 2025.
 			</li>
 			<li><b>[Sep. 2024]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.110.125131" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
 			</li>
@@ -109,11 +111,12 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 <!--			<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><img src="img/march2023_ads.png" width="100%" alt="Summary of Talk"></details></div>
 			-->
 			</li>
-		<li><b>[Sep. 2023]</b> I joined <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="font-style: italic;">Professor Igor Herbut's group</a>, at <span style="font-style: italic;">Simon Fraser University, Burnaby, Canada</span>.
-			</li>
 		</ul>
 <details class="description" close><summary data-open="[Close]" data-close="Past News"></summary>
 	<ul>
+
+		<li><b>[Sep. 2023]</b> I joined <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="font-style: italic;">Professor Igor Herbut's group</a>, at <span style="font-style: italic;">Simon Fraser University, Burnaby, Canada</span>.
+			</li>
 		<li><b>[Aug. 2023]</b> I have moved to Vancouver! My new email address is 'sangeun_han at sfu.ca'.
 			</li>
 		<li><b>[Aug. 2023]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.108.L060401" style="font-style: italic;">"Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a <span style="font-style: italic;">Letter</span>.
@@ -136,7 +139,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240913_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/09/13)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20241127_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/11/27)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -161,6 +164,26 @@ Articles related to my works:
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
 		<ul>
+					<li><div class="paper_title" style="display: flex;">
+					<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+			  <div class="sign3" style="display: inline-block;">W</div>
+			  <div class="sign1" style="display: inline-block;float: left;">N</div>
+			  <div class="sign2" style="display: inline-block;float: left;">E</div>
+			  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2411.16842" style="text-decoration:none;color:var(--font-color)">"
+Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality
+"</a>
+								</span>
+							<span class="cvperiod"></span></div>
+							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://scholar.google.de/citations?user=WAnadWgAAAAJ&hl=en&inst=10441630620217902552" style="text-decoration:none;color:var(--font-color)">Shouryya Ray</a>, and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
+								<a href="https://arxiv.org/abs/2411.16842">arXiv:2411.16842</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+			  <label>
+			    <input type="checkbox">
+			  </label>
+			</div> We investigate the relativistic SO(2)- and SO(3)-invariant Gross-Neveu-Yukawa field theories for real, rank-two, symmetric, traceless tensor order parameters coupled to $N_{\text{f}}$ flavors of two-component Dirac fermions. These field theories arise as an effective description of fractionalized spin-orbital liquids. The two theories are the simplest and special cases of the more general class of field theories with SO($N$) symmetric tensor order parameter coupled to Dirac fermions, in which the symmetry is low enough to allow only one, and not the usual two quartic self-interaction terms. Using two-loop renormalization group near the upper critical dimension, we demonstrate that the theory exhibits a new critical fixed point and the concomitant continuous phase transition for any value of $N_{\text{f}}$. We discuss the crucial role of the symmetry-allowed sextic self-interactions in the selection of the ground state configuration in the case of SO(3). The universal quantities such as the the anomalous dimensions of order parameters and fermions, the correlation length exponent, and the mass gap ratio between order parameter and fermion masses are computed up to $\epsilon^{2}$ order.
+			</span></details></div>
+					</li>
+			<!-- -->
+		<!-- -->
 					<li><div class="paper_title" style="display: flex;">
 					<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
 			  <div class="sign3" style="display: inline-block;">W</div>
@@ -220,11 +243,7 @@ Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO
 		<!-- -->
 				<!-- -->
 						<li><div class="paper_title" style="display: flex;">
-						<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
-				  <div class="sign3" style="display: inline-block;">W</div>
-				  <div class="sign1" style="display: inline-block;float: left;">N</div>
-				  <div class="sign2" style="display: inline-block;float: left;">E</div>
-				  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2306.14955" style="text-decoration:none;color:var(--font-color)">"Fermi Surface Bosonization for Non-Fermi Liquids
+						<span class="cvitem"><a href="https://arxiv.org/abs/2306.14955" style="text-decoration:none;color:var(--font-color)">"Fermi Surface Bosonization for Non-Fermi Liquids
 "</a>
 									</span>
 								<span class="cvperiod"></span></div>
