20241201_daily_arXiv_update

--- a/arxiv/2024_11_arxiv.html
+++ b/arxiv/2024_11_arxiv.html
@@ -235,6 +235,70 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14114">https://arxiv.org/abs/2411.14114</a></span> Dirac and chiral spin liquids on spin-1/2 square-lattice Heisenberg (Ya-Hui Zhang)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.08856">https://arxiv.org/abs/2201.08856</a></span> Interplay of symmetry breaking and deconfinement in 3D quantum vertex models (Shankar Balasubramanian, Daniel Bulmash, Victor Galitski, Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.13857">https://arxiv.org/abs/2411.13857</a></span> Effective actions, cutoff regularization, quasi-locality, and gluing of partition functions</p>
+<br>
+<p class="p1">20241125</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14776">https://arxiv.org/abs/2411.14776</a></span> On the non-hermitian Kitaev chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14724">https://arxiv.org/abs/2411.14724</a></span> Edge-Edge Correlations without Edge-States: η-clustering State as Ground State of the Extended Attractive SU(3) Hubbard Chain (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14782">https://arxiv.org/abs/2411.14782</a></span> Collective mode across the BCS-BEC crossover in Holstein model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14682">https://arxiv.org/abs/2411.14682</a></span> Surface topological quantum criticality: Conformal manifolds and Discrete Strong Coupling Fixed Points ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14722">https://arxiv.org/abs/2411.14722</a></span> Glassy Relaxation Dynamics in the Two-Dimensional Heavy Fermion Antiferromagnet CeSiI (Philip Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14746">https://arxiv.org/abs/2411.14746</a></span> Measurement of the dynamic charge susceptibility near the charge density wave transition in ErTe3 (Eduardo Fradkin, Ian R. Fisher, Peter Abbamonte)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14582">https://arxiv.org/abs/2411.14582</a></span> Postselection in lattice bosons undergoing continuous measurements (Matthew P. A. Fisher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14599">https://arxiv.org/abs/2411.14599</a></span> Limits of the Lindblad and non-Hermitian description of open systems ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.14523">https://arxiv.org/abs/2411.14523</a></span> A relativistic QFT description for the interaction of a spin with a magnetic field ***</p>
+<p class="p2"><br></p>
+<p class="p1">20241126</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15840">https://arxiv.org/abs/2411.15840</a></span> Catalog of phonon emergent particles *** (Hoi Chun Po)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16032">https://arxiv.org/abs/2411.16032</a></span> Quantum transport of Dirac fermions in selected graphene nanosystems away from the charge-neutrality point **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16036">https://arxiv.org/abs/2411.16036</a></span> Third-order and fifth-order nonlinear spin-current generation in g-wave and i-wave altermagnets and perfect spin-current diode based on f -wave magnets *** (Motohiko Ezawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16675">https://arxiv.org/abs/2411.16675</a></span> Fully nonequilibrium Hall response from Berry curvature *** (Shouvik Sur, Lei Chen, Yiming Wang, Chandan Setty, Silke Paschen, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16357">https://arxiv.org/abs/2411.16357</a></span> Bosonic Peierls state emerging from the one-dimensional Ising-Kondo interaction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16287">https://arxiv.org/abs/2411.16287</a></span> Observation of quantized vortex in an atomic Bose-Einstein condensate at Dirac point ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16226">https://arxiv.org/abs/2411.16226</a></span> Bose-Einstein condensation at constant pressure</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15874">https://arxiv.org/abs/2411.15874</a></span> Interaction between gravitational waves and trapped Bose-Einstein condensates</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15300">https://arxiv.org/abs/2411.15300</a></span> Bootstrapping the 3d Ising Stress Tensor (David Simmons-Duffin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16542">https://arxiv.org/abs/2411.16542</a></span> The entanglement membrane in 2d CFT: reflected entropy, RG flow, and information velocity ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15299">https://arxiv.org/abs/2411.15299</a></span> Regularizing 3D conformal field theories via anyons on the fuzzy sphere ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15848">https://arxiv.org/abs/2411.15848</a></span> Classifying Logical Gates in Quantum Codes via Cohomology Operations and Symmetry ***** (Po-Shen Hsin, Ryohei Kobayashi, Guanyu Zhu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16306">https://arxiv.org/abs/2411.16306</a></span> Holographic Schwinger-Keldysh effective field theories including a non-hydrodynamic mode *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15304">https://arxiv.org/abs/2411.15304</a></span> Thermal Hall response of an abelian chiral spin liquid at finite temperatures ***** (Avijit Maity, Haoyu Guo, Subir Sachdev, Vikram Tripathi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15909">https://arxiv.org/abs/2411.15909</a></span> The Hund-metal path to strong electronic correlations (Antoine Georges, Gabriel Kotliar)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15969">https://arxiv.org/abs/2411.15969</a></span> Spin amplitude wave due to dipole-quadrupole hybridization in spin-1 pyrochlore magnets (Chisa Hotta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15164">https://arxiv.org/abs/2411.15164</a></span> The Modification of Feynman Diagrams in Curved Space-Time</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.15312">https://arxiv.org/abs/2411.15312</a></span> The Seiberg-Witten Axion (Csaba Csa ́ki, John Terning)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16211">https://arxiv.org/abs/2411.16211</a></span> Les Houches lectures on non-perturbative topological strings *****</p>
+<p class="p2"><br></p>
+<p class="p1">20241127</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.16842">https://arxiv.org/abs/2411.16842</a></span> <b>Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality ******</b> (<b>SangEun Han</b>, Shouryya Ray, Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17398">https://arxiv.org/abs/2411.17398</a></span> Quantum-Classical Correspondence of Non-Hermitian Symmetry Breaking *** (Wei Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.08572">https://arxiv.org/abs/2310.08572</a></span> Non-Bloch band theory for non-Hermitian continuum systems (Zhong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.16482">https://arxiv.org/abs/2406.16482</a></span> Phase diagram of non-Hermitian BCS superfluids in a dissipative asymmetric Hubbard model ***** (Soma Takemori, Kazuki Yamamoto, Akihisa Koga)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.02010">https://arxiv.org/abs/2408.02010</a></span> Tensor Network Python (TeNPy) version 1</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.01683">https://arxiv.org/abs/2410.01683</a></span> Corrections to Conformal Anomaly at BKT Transitions *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.12288">https://arxiv.org/abs/2405.12288</a></span> Dynamical suppression of many-body non-Hermitian skin effect in Anyonic systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.03515">https://arxiv.org/abs/2411.03515</a></span> Tutorial: Classifying Photonic Topology Using the Spectral Localizer and Numerical K-Theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17635">https://arxiv.org/abs/2411.17635</a></span> Variational Dual Solutions of Chern-Simons Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17185">https://arxiv.org/abs/2411.17185</a></span> Quasiparticle interference in altermagnets (Wei Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17219">https://arxiv.org/abs/2411.17219</a></span> Topological domain-wall pump with Z2 spontaneous symmetry breaking (Yoshihito Kuno, Yasuhiro Hatsugai)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17452">https://arxiv.org/abs/2411.17452</a></span> From the Shastry-Sutherland model to the J1-J2 Heisenberg model ***** (Jong Yeon Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20241128</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17964">https://arxiv.org/abs/2411.17964</a></span> Probing topological degeneracy on a torus using superconducting altermagnets (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18621">https://arxiv.org/abs/2411.18621</a></span> Yukawa-Lorentz Symmetry of Tilted Non-Hermitian Dirac Semimetals at Quantum Criticality ***** (Vladimir Juriˇci ́c)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18434">https://arxiv.org/abs/2411.18434</a></span> Chiral anomaly and internode scatterings in multifold semimetals **** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17802">https://arxiv.org/abs/2411.17802</a></span> Quantum simulation of the Sachdev–Ye–Kitaev model using time-dependent disorder in optical cavities ***** (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18313">https://arxiv.org/abs/2411.18313</a></span> On the detectability of paraparticles beyond bosons and fermions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17818">https://arxiv.org/abs/2411.17818</a></span> Interplay of superconductivity and charge-density-wave order in kagome materials ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18160">https://arxiv.org/abs/2411.18160</a></span> Detecting Standard Model Gauge Group from Generalized Fractional Quantum Hall Effect ***** (Po-Shen Hsin1, Jaume Gomis)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18471">https://arxiv.org/abs/2411.18471</a></span> Strongly Coupled P T -Symmetric Models in Holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18592">https://arxiv.org/abs/2411.18592</a></span> Thermal response of the Nieh–Yan term ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17728">https://arxiv.org/abs/2411.17728</a></span> Analytic Continuation by Feature Learning</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17848">https://arxiv.org/abs/2411.17848</a></span> Singularity with and without disorder at AKLT points ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18245">https://arxiv.org/abs/2411.18245</a></span> Non-Fermi liquid induced by U(1) gauge field interactions: a functional renormalization group analysis *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18446">https://arxiv.org/abs/2411.18446</a></span> Interlayer couplings in cuprates: structural origins, analytical forms, and structural estimators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.14872">https://arxiv.org/abs/2406.14872</a></span> FeynGrav 3.0</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.17803">https://arxiv.org/abs/2411.17803</a></span> Chiral effective theory of scalar and vector diquarks revisited</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2411.18056">https://arxiv.org/abs/2411.18056</a></span> SymTFT Approach to 2D Orbifold Groupoids: ‘t Hooft Anomalies, Gauging, and Partition Functions ****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
