20241227_daily_arxiv_update

--- a/arxiv/2024_12_arxiv.html
+++ b/arxiv/2024_12_arxiv.html
@@ -256,6 +256,19 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.17493">https://arxiv.org/abs/2412.17493</a></span> Infrared properties of two-dimensional SU(N)/H nonlinear σ models at nonzero θ angles</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.17605">https://arxiv.org/abs/2412.17605</a></span> Deconfined classical criticality in the anisotropic quantum spin-1/2 XY model on the square lattice ***** (Christopher Mudry, O ̈mer M. Aksoy, Claudio Chamon, Akira Furusaki)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.16795">https://arxiv.org/abs/2412.16795</a></span> Introduction to Black Hole Thermodynamics ***** (Edward Witten)</p>
+<br>
+<p class="p1">20241225</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18179">https://arxiv.org/abs/2412.18179</a></span> Uniquely identifying quantum Hall phases in charge neutral graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18397">https://arxiv.org/abs/2412.18397</a></span> Scheme to Detect the Strong-to-weak Symmetry Breaking via Randomized Measurements ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18307">https://arxiv.org/abs/2412.18307</a></span> Modern Approach to 2D Conformal Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18490">https://arxiv.org/abs/2412.18490</a></span> Field-theoretic approach to flat polymerized membranes *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18504">https://arxiv.org/abs/2412.18504</a></span> The S = 1 XY and XYZ models on the two or higher dimensional hypercubic lattice do not possess nontrivial local con- served quantities (Naoto Shiraishi, Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18606">https://arxiv.org/abs/2412.18606</a></span> Lattice T-duality from non-invertible symmetries in quantum spin chains (Salvatore D. Pace, Arkya Chatterjee, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.17911">https://arxiv.org/abs/2412.17911</a></span> Exotic phase transitions in spin ladders with discrete symmetries that emulate spin-1/2 bosons in two dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18025">https://arxiv.org/abs/2412.18025</a></span> Collinear Altermagnets and their Landau Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18057">https://arxiv.org/abs/2412.18057</a></span> Emergence of topological defects and spin liquid in a two-orbital spin-fermion model on the honeycomb lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.18528">https://arxiv.org/abs/2412.18528</a></span> Systematic Constructions of Interfaces and Anomalous Boundaries for Fermionic Symmetry-Protected Topological Phases ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.17895">https://arxiv.org/abs/2412.17895</a></span> A landscape of 4d N =1 SCFTs with a=c (Monica Jinwoo Kang, Craig Lawrie, Ki-Hong Lee, Jaewon Song)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
